# GoogleTest

./: README.md
GTest_quick_start/: CMakeLists.txt  GTest_quick_start.cpp  README.md
GTest_quick_start/1.GTest_quick_start/: GTest_quick_start.cpp
GTest_quick_start/2.Gtest_with_TextFixture/: CMakeLists.txt
GTest_quick_start/3.GTest_without_TextFixture/: CMakeLists.txt  GTest_without_TextFixture.cpp
GoogleTest_Project/Gtest_without_mock/: CMakeLists.txt
GoogleTest_Project/Gtest_without_mock/include/: dummy.hpp
GoogleTest_Project/Gtest_without_mock/src/: dummy.cpp
GoogleTest_Project/Gtest_without_mock/test/: testDummy.cpp
